<resources>
    <string name="app_name">Counts</string>
    <string name="welcome_text">Welcome to Counts</string>
    <string name="start_count">Start Counting</string>
    <string name="item_title">Name: </string>
    <string name="item_title_value">Enter the item name here</string>
    <string name="item_num">Number: </string>
    <string name="num_item">Enter the number here</string>
    <string name="add_btn">Add Item</string>
    <string name="item_list_title">items</string>
    <string name="about">About</string>
    <string name="about_text"> <b>About Count</b> \n\n
        The count is an inventory helper app that take care \n
        of the small details of getting the right details by \n
        items are count properly and entered correctly.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
