<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/item_title"
            app:layout_constraintBaseline_toBaselineOf="@+id/item_value"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/item_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/item_title_value"
            android:inputType="textPersonName"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/item_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/item_num"
            app:layout_constraintBaseline_toBaselineOf="@+id/num_item"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/num_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/num_item"
            android:inputType="number"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_num"
            app:layout_constraintTop_toBottomOf="@+id/item_value" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/add_btn"
            style="@style/button_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/num_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
